--- a/index.html
+++ b/index.html
@@ -1,288 +1,45 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JaveWiki</title>
+    <title>Сайт временно отключен</title>
     <style>
-        :root {
-            --bg-color: #2c2c2c;
-            --text-color: #e0e0e0;
-            --container-bg: #3c3c3c;
-            --tab-bg: #28a745; /* Changed to green */
-            --tab-hover: #218838; /* Darker green for hover */
-            --tab-active: #1e7e34; /* Even darker green for active */
-            --shadow-color: rgba(0, 0, 0, 0.3);
-        }
-
         body {
+            background-color: #000;
+            color: #fff;
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 10px;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            transition: all 0.3s;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: auto;
-            background: var(--container-bg);
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px var(--shadow-color);
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: var(--text-color);
-        }
-
-        .welcome {
-            text-align: center;
-            font-size: 1em;
-            margin-bottom: 20px;
-            color: #bbb;
-        }
-
-        .tabs {
             display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
             justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .tab {
-            flex: 1 1 auto;
-            max-width: 48%;
-            padding: 10px;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             text-align: center;
-            background-color: var(--tab-bg);
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-size: 0.9em;
         }
-
-        .tab:hover {
-            background-color: var(--tab-hover);
+        .container {
+            max-width: 600px;
+            padding: 20px;
         }
-
-        .tab.active {
-            background-color: var(--tab-active);
+        h1 {
+            font-size: 2.5em;
         }
-
-        #wikiContent {
-            line-height: 1.6;
-            margin-bottom: 20px;
-            white-space: pre-line;
-            font-size: 1em;
-            color: var(--text-color);
+        p {
+            font-size: 1.5em;
         }
-
-        @media (max-width: 500px) {
-            .tab {
-                max-width: 100%;
-            }
+        a {
+            color: #00ff00;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <h1>JaveWiki</h1>
-    <div class="welcome">Добро пожаловать на вики JavelinRP</div>
-
-    <!-- Вкладки -->
-    <div class="tabs">
-        <div class="tab active" onclick="showTab('countries')">СТРАНЫ</div>
-        <div class="tab" onclick="showTab('rp')">РП</div>
-        <div class="tab" onclick="showTab('rules')">ПРАВИЛА</div>
-        <div class="tab" onclick="showTab('admin')">АДМИНИСТРАЦИЯ</div>
-        <div class="tab" onclick="window.location.href='https://t.me/javelin_rp_bot'">КУПИТЬ ДОСТУП</div>
+    <div class="container">
+        <h1>Сайт временно недоступен</h1>
+        <p>Чтобы ознакомиться с содержимым, посетите архивную версию по ссылке:</p>
+        <p><a href="https://web.archive.org/web/20250531191305/https://javelinrp.ru/">https://web.archive.org/web/20250531191305/https://javelinrp.ru/</a></p>
     </div>
-
-    <!-- Контент -->
-    <div id="wikiContent"></div>
-</div>
-
-<script>
-    let currentTab = "countries";
-
-    // Данные для каждой вкладки
-    const tabContent = {
-        countries: {
-            text: "СТРАНЫ\n\n" +
-                  "ЦАРСТВО МИРОСЛАВИЯ\n" +
-                  "Мирславия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
-                  "Форма правления — монархия.\n" +
-                  "Царь: Sherekhluk.\n\n" +
-                  "РЕСПУБЛИКА ДЖАВЕЛИН\n" +
-                  "Джавелин — большая и богатая страна с высокой опасностью и сильной экономикой.\n" +
-                  "Форма правления — президентская республика.\n" +
-                  "Президент: Алексей Михалович Смирнов."
-        },
-        rp: {
-            text: "📌 Основные РП-команды для отыгровки\n" +
-                  "/me — используется для описания действия, которое совершает твой персонаж. Видно всем рядом находящимся игрокам.\n" +
-                  "📍 Пример: /me достал документы из внутреннего кармана и передал офицеру.\n\n" +
-                  "/do — позволяет описать окружающую обстановку, последствия действия или дополнительную информацию, которую видят другие.\n" +
-                  "📍 Пример: /do На полу лежит окровавленный нож.\n\n" +
-                  "/it — применяется для описания внешних событий, не контролируемых персонажем напрямую (например, погода, звуки, случайные NPC).\n" +
-                  "📍 Пример: /it Вдали слышен вой сирены.\n\n" +
-                  "/try — попытка совершить действие с неизвестным результатом. Исход (успех или неудача) решается системой случайным образом. Подходит для отыгровки рисковых действий.\n" +
-                  "📍 Пример: /try взломать замок при помощи шпильки.\n" +
-                  "🟩 Удачно: \"Действие удалось.\"\n" +
-                  "🟥 Неудачно: \"Попытка провалилась.\"\n\n" +
-                  "/roll [число] — бросок случайного числа от 1 до указанного значения. Часто используется в соревновательных ситуациях или спорных моментах РП.\n" +
-                  "📍 Пример: /roll 100 — система выдает случайное число от 1 до 100. Игрок с большим числом побеждает.\n\n" +
-                  "💬 Внеигровые команды\n" +
-                  "/ooc — сообщение вне персонажа (Out of Character), видимое всем в радиусе. Используется для объяснений, вопросов или уточнений, не связанных с РП.\n" +
-                  "📍 Пример: /ooc Ребята, подождите минуту, вылетел.\n\n" +
-                  "/looc — локальное OOC-сообщение, видимое только ближайшим игрокам. Используется для кратких технических замечаний в рамках текущей сцены.\n" +
-                  "📍 Пример: /looc лаг, можешь повторить?"
-        },
-        rules: {
-            text: "🔸 Основные нарушения\n" +
-                  "MG – Использование OOC инфы в RP /ooc\n" +
-                  "RDM – Убийство без причины (до 3 чел.) – 10 мин\n" +
-                  "Mass RDM – 4+ человек – 1 час\n" +
-                  "Free Arrest / Cuffs / Taser – Без RP-повода – 5–10 мин\n" +
-                  "Solo Raid – Только не для КГБ / объявление войны – 10 мин\n" +
-                  "CJ – Смена профессии вне логики – 5 мин\n\n" +
-
-                  "🛡 Администрация (ADM)\n" +
-                  "Бан/кик/джайл без причины — запрещён\n" +
-                  "Админка = запрещено взаимодействовать с RP напрямую\n" +
-                  "Выдача предметов/денег только по разрешению\n" +
-                  "Жалобы — только в админ-профессии\n" +
-                  "Несерьёзные нарушения — предупреди в чат\n" +
-                  "Нарушения админов: от 10 мин до PERM\n\n" +
-
-                  "🛑 Запрещённое\n" +
-                  "Читы / софт — PERM\n" +
-                  "Voice Abuse — громкие звуки / Soundpad — 5 мин\n" +
-                  "NHL – После смерти забываешь всё, кроме: друзей, имущество, вещи — 10 мин\n" +
-                  "Non RP Gun – Использование неразрешённого оружия — 10 мин\n" +
-                  "Leave – Лив с жалобы / РП — 10 мин\n" +
-                  "Обман администрации — 30 мин\n" +
-                  "MRB – 5+ нарушений — 1 неделя – PERM\n" +
-                  "Wand / Command Abuse — 1 час – PERM\n" +
-                  "Слив – Вред серверу / игроку, заказ 1 игрока 5+ раз — 30 мин\n" +
-                  "Name Abuse — оскорбительные ники — PERM\n" +
-                  "MB – имбастройки (бедрок, ловушки) — 30 мин + сет\n" +
-                  "Возраст < 11 лет — бан до 11 лет\n" +
-                  "Dox — раскрытие личной инфы — PERM\n" +
-                  "Creative Abuse — запрещённый лут из магазинов — 15 мин\n" +
-                  "Rule/Bag Abuse — использование дыр в правилах — 1 месяц\n" +
-                  "Rule Ignore — игнор/нечтение правил — PERM\n" +
-                  "OSA / OSAR / OSADM — Оскорбления: 30 мин – 24 ч\n\n" +
-
-                  "🔫 Классы оружия\n" +
-                  "Класс\tТипы оружия\n" +
-                  "0 класс\tЛук, арбалет, трезубец, холодное оружие\n" +
-                  "1 класс\tПистолеты\n" +
-                  "2 класс\tПистолеты-пулемёты\n" +
-                  "3 класс\tОружие без автоматического режима\n" +
-                  "4 класс\tОружие с автоматическим режимом\n" +
-                  "5 класс\tПулеметы, взрывное и воспламеняющие\n" +
-                  "Запрещено\tЧитерское/анимированное оружие\n\n" +
-
-                  "👥 Профессии и допустимое оружие\n" +
-                  "Профессия\tДействия\tОружие\n" +
-                  "Безработный\tТолько РП-отыгрыш\t1 класс\n" +
-                  "Охотник\tОхота, чёрный рынок, криминал\t3 класс\n" +
-                  "Шахтёр\tШахты, руды, чёрный рынок\t2 класс\n" +
-                  "Повар\tЕда, бар, криминал\t2 класс\n" +
-                  "Фермер\tСельхоз, чёрный рынок, ферма\t3 класс\n" +
-                  "Водитель\tПеревозка, компания, криминал\t1 класс\n" +
-                  "Разнорабочий\tСтроительство, ремонт\t1 класс\n" +
-                  "Продавец\tТорговля\t2 класс\n" +
-                  "Маньяк\tУбийства в безлюдных местах\t0 класс\n" +
-                  "Элитный маньяк\tУбийства в безлюдных и не общественных местах, маскировка\t4 класс\n" +
-                  "Наркоторговец\tНаркотики, ферма\t3 класс\n" +
-                  "Наёмный убийца\tУбийства по заказу\tЛюбое\n" +
-                  "Бандит\tКриминал, черный рынок, маник\tЛюбое\n" +
-                  "Похититель\tПохищения по заказу\t2 класс\n" +
-                  "КГБ\tСекретная работа, маскировка, рейды\tЛюбое\n" +
-                  "Полиция\tПравопорядок\t2 класс\n" +
-                  "СОВП (спецназ)\tПравопорядок, рейды\t3 класс\n" +
-                  "Армия\tТолько во время войны\tЛюбое\n" +
-                  "Охранник\tЗащита других\t3 класс\n" +
-                  "Фуфелшмерц\tКомбинированная профессия\t4 класс"
-        },
-        admin: {
-            text: "АДМИНИСТРАЦИЯ\n\n" +
-                  "Администраторы имеют право:\n" +
-                  "- Блокировать нарушителей\n" +
-                  "- Выдавать временные наказания\n" +
-                  "- Присутствовать в роли наблюдателя в РП\n" +
-                  "- Управлять базой правил\n" +
-                  "- Вести журнал изменений и наказаний\n\n" +
-                  "⚠️ Запрещено:\n" +
-                  "- Вмешиваться в RP напрямую\n" +
-                  "- Выдавать преимущество одному игроку\n" +
-                  "- Изменять правила без согласования\n" +
-                  "- Использовать команды в корыстных целях\n\n" +
-                  "📌 Жалобы принимаются только через официальные формы внутри игры или в специальных каналах Discord."
-        }
-    };
-
-    window.onload = function () {
-        showTab(currentTab);
-    };
-
-    function showTab(tabName) {
-        currentTab = tabName;
-
-        document.getElementById("wikiContent").textContent = tabContent[tabName].text;
-
-        document.querySelectorAll(".tab").forEach(tab => tab.classList.remove("active"));
-        event.target.classList.add("active");
-    }
-</script>
 </body>
 </html>
