--- a/index.html
+++ b/index.html
@@ -6,100 +6,134 @@
     <title>JaveWiki</title>
     <style>
         :root {
-            --bg-color: #2c2c2c;
-            --text-color: #e0e0e0;
-            --container-bg: #3c3c3c;
-            --tab-bg: #28a745;
-            --tab-hover: #218838;
-            --tab-active: #1e7e34;
-            --shadow-color: rgba(0, 0, 0, 0.3);
+            --bg-color: #1a1a1a;
+            --text-color: #ffffff;
+            --highlight-color: #28a745;
+            --container-bg: #2a2a2a;
+            --tab-bg: #ffffff;
+            --tab-hover: #e0e0e0;
+            --tab-active: #cccccc;
+            --tab-text: #000000;
+            --shadow-color: rgba(0, 0, 0, 0.5);
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             margin: 0;
-            padding: 10px;
+            padding: 20px;
             background-color: var(--bg-color);
             color: var(--text-color);
-            transition: all 0.3s;
+            line-height: 1.6;
         }
         .container {
-            width: 100%;
-            max-width: 800px;
+            max-width: 900px;
             margin: auto;
             background: var(--container-bg);
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px var(--shadow-color);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px var(--shadow-color);
+        }
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
         h1 {
-            text-align: center;
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: var(--text-color);
+            font-size: 2.5em;
+            margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        .soldier-img {
+            width: 100px;
+            height: auto;
+            object-fit: contain;
         }
         .welcome {
             text-align: center;
-            font-size: 1em;
-            margin-bottom: 20px;
-            color: #bbb;
+            font-size: 1.1em;
+            margin-bottom: 30px;
+            color: #cccccc;
+            font-style: italic;
         }
         .tabs {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 15px;
             justify-content: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .tab {
             flex: 1 1 auto;
-            max-width: 48%;
-            padding: 10px;
+            max-width: 150px;
+            padding: 12px;
             text-align: center;
             background-color: var(--tab-bg);
-            color: white;
+            color: var(--tab-text);
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s;
-            font-size: 0.9em;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            font-size: 1em;
+            font-weight: bold;
+            text-transform: uppercase;
         }
         .tab:hover {
             background-color: var(--tab-hover);
+            transform: scale(1.05);
         }
         .tab.active {
             background-color: var(--tab-active);
+            transform: scale(1.05);
         }
         #wikiContent {
-            line-height: 1.6;
-            margin-bottom: 20px;
+            line-height: 1.8;
+            font-size: 1.1em;
             white-space: pre-line;
-            font-size: 1em;
-            color: var(--text-color);
         }
-        @media (max-width: 500px) {
+        #wikiContent span.highlight {
+            color: var(--highlight-color);
+            font-weight: bold;
+        }
+        @media (max-width: 600px) {
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
+            .soldier-img {
+                margin-top: 10px;
+                width: 150px;
+            }
             .tab {
                 max-width: 100%;
+            }
+            h1 {
+                font-size: 1.8em;
             }
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>JaveWiki</h1>
+    <div class="header">
+        <h1>JAVELIN RP</h1>
+        <img src="images/javelin-logo.png" alt="Javelin RP Logo" class="soldier-img">
+    </div>
     <div class="welcome">Добро пожаловать на вики JavelinRP</div>
     <div class="tabs">
         <div class="tab active" onclick="showTab('countries')">СТРАНЫ</div>
         <div class="tab" onclick="showTab('rp')">РП</div>
-        <div class="tab" onclick="window.location.href='https://clck.ru/3LNnmd'">ПРАВИЛА</div> 
         <div class="tab" onclick="showTab('admin')">АДМИНИСТРАЦИЯ</div>
-        <div class="tab" onclick="window.location.href='https://t.me/javelin_rp_bot'">КУПИТЬ  ДОСТУП</div>
+        <div class="tab" onclick="window.location.href='https://clck.ru/3LNnmd'">ПРАВИЛА</div>
+        <div class="tab" onclick="window.location.href='https://t.me/javelin_rp_bot'">КУПИТЬ ДОСТУП</div>
     </div>
     <div id="wikiContent"></div>
 </div>
+
 <script>
     let currentTab = "countries";
     const tabContent = {
         countries: {
-            text: "СТРАНЫ\n" +
+            text: "<span class='highlight'>СТРАНЫ</span>\n" +
                   "ЦАРСТВО МИРОСЛАВИЯ\n" +
                   "Мирславия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
                   "Форма правления — монархия.\n" +
@@ -110,23 +144,16 @@
                   "Президент: Алексей Михалович Смирнов."
         },
         rp: {
-            text: "📌 Основные РП-команды для отыгровки\n" +
-                  "/me — используется для описания действия, которое совершает твой персонаж. Видно всем рядом находящимся игрокам.\n" +
-                  "📍 Пример: /me достал документы из внутреннего кармана и передал офицеру.\n" +
-                  "/try — попытка совершить действие с неизвестным результатом. Исход (успех или неудача) решается системой случайным образом. Подходит для отыгровки рисковых действий.\n" +
-                  "📍 Пример: /try взломать замок при помощи шпильки.\n" +
-                  "🟩 Удачно: \"Действие удалось.\"\n" +
-                  "🟥 Неудачно: \"Попытка провалилась.\"\n" +
-                  "/roll [число] — бросок случайного числа от 1 до указанного значения. Часто используется в соревновательных ситуациях или спорных моментах РП.\n" +
-                  "📍 Пример: /roll 100 — система выдает случайное число от 1 до 100. Игрок с большим числом побеждает.\n" +
-                  "💬 Внеигровые команды\n" +
-                  "/ooc — сообщение вне персонажа (Out of Character), видимое всем в радиусе. Используется для объяснений, вопросов или уточнений, не связанных с РП.\n" +
-                  "📍 Пример: /ooc Ребята, подождите минуту, вылетел.\n" +
-                  "/looc — локальное OOC-сообщение, видимое только ближайшим игрокам. Используется для кратких технических замечаний в рамках текущей сцены.\n" +
-                  "📍 Пример: /looc лаг, можешь повторить?"
+            text: "<span class='highlight'>РП</span>\n" +
+                  "Ларство мирславия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
+                  "Форма правления — монархия.\n" +
+                  "Царь: Sherekhluk.\n" +
+                  "Республика Джавелин — большая и богатая страна с высокой опасностью и сильной экономикой.\n" +
+                  "Форма правления — президентская республика.\n" +
+                  "Президент: Алексей Михалович Смирнов."
         },
         admin: {
-            text: "АДМИНИСТРАЦИЯ\n" +
+            text: "<span class='highlight'>АДМИНИСТРАЦИЯ</span>\n" +
                   "Администраторы имеют право:\n" +
                   "- Блокировать нарушителей\n" +
                   "- Выдавать временные наказания\n" +
@@ -141,12 +168,14 @@
                   "📌 Жалобы принимаются только через официальные формы внутри игры или в специальных каналах Discord."
         }
     };
+
     window.onload = function () {
         showTab(currentTab);
     };
+
     function showTab(tabName) {
         currentTab = tabName;
-        document.getElementById("wikiContent").textContent = tabContent[tabName].text;
+        document.getElementById("wikiContent").innerHTML = tabContent[tabName].text;
         document.querySelectorAll(".tab").forEach(tab => tab.classList.remove("active"));
         event.target.classList.add("active");
     }
