--- a/index.html
+++ b/index.html
@@ -235,12 +235,30 @@
         },
         rp: {
             text: "<span class='highlight'>РП</span>\n" +
-                  "Ларство мирславия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
-                  "Форма правления — монархия.\n" +
-                  "Царь: Sherekhluk.\n" +
-                  "Республика Джавелин — большая и богатая страна с высокой опасностью и сильной экономикой.\n" +
-                  "Форма правления — президентская республика.\n" +
-                  "Президент: Алексей Михалович Смирнов."
+                  "/roll 🎲\n" +
+                  "Бросок кубика для случайного числа (обычно 1–100). Используется для решения спорных ситуаций или рандома в ролевых действиях.\n" +
+                  "Пример:\n" +
+                  "/roll\n" +
+                  "Результат: 67\n\n" +
+                  "/me 🎭\n" +
+                  "Описывает действие вашего персонажа в третьем лице. Видят все рядом стоящие игроки.\n" +
+                  "Пример:\n" +
+                  "/me достал из кармана ключи и начал открывать дверь\n" +
+                  "В чате: Игрок достал из кармана ключи и начал открывать дверь\n\n" +
+                  "/try 🤞\n" +
+                  "Пытается выполнить действие с шансом успеха или неудачи. Обычно после команды кидается /roll.\n" +
+                  "Пример:\n" +
+                  "/try вскрыть замок отмычкой\n" +
+                  "В чате: Игрок пытается вскрыть замок отмычкой\n" +
+                  "Затем /roll — если выпало больше 50, действие удалось.\n\n" +
+                  "/ooc 🌐\n" +
+                  "Сообщение вне ролеплея (Out of Character) — видят все игроки на сервере. Используется для вопросов, объявлений, обсуждений вне игры.\n" +
+                  "Пример:\n" +
+                  "/ooc Как продать дом?\n\n" +
+                  "/looc 💬\n" +
+                  "Локальный OOC — сообщение вне ролеплея, но видно только рядом стоящим игрокам.\n" +
+                  "Пример:\n" +
+                  "/looc подвинься пожалуйста"
         },
         admin: {
             text: "<span class='highlight'>АДМИНИСТРАЦИЯ</span>\n" +
