--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         countries: {
             text: "<span class='highlight'>СТРАНЫ</span>\n" +
                   "ЦАРСТВО МИРОСЛАВИЯ\n" +
-                  "Мирславия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
+                  "Мирославия — карликовое и островное государство, занимающее менее 100 блоков.\n" +
                   "Форма правления — монархия.\n" +
                   "Царь: Sherekhluk.\n" +
                   "РЕСПУБЛИКА ДЖАВЕЛИН\n" +
