--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>JAVELIN RP</h1>
-        <img src="images/javelin-logo.png" alt="Javelin RP Logo" class="soldier-img">
+        <h1>С ДНЁМ РОССИИ</h1>
+        <img src="images/javelinlogo_ru.png" alt="Javelin RP Logo" class="soldier-img">
     </div>
     <div class="welcome">Добро пожаловать на вики JavelinRP</div>
     <div class="tabs">
