--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <div class="container">
     <div class="header">
         <h1>JAVELIN RP</h1>
-        <img src="images/javelin-logo.png" alt="Javelin RP Logo" class="soldier-img">
+        <img src="images/javelin_logo_ru.png" alt="Javelin RP Logo" class="soldier-img">
     </div>
     <div class="welcome">Добро пожаловать на вики JavelinRP</div>
     <div class="tabs">
